implement flash messaging for new pet

--- a/templates/pets.html
+++ b/templates/pets.html
@@ -12,11 +12,11 @@
       </div>
       <div class="card-body pt-0">
         <h5 class="card-title my-2">
-          '{{pet.name}}'
+          {{pet.name}}
           {% if pet.available %}
-          is available
+          <span class="font-weight-bold">is available</span>
           {% else %}
-          is not available
+          <span class="font-weight-bold">is not available</span>
           {% endif %}
         </h5>
         <p class="card-text">
