--- a/templates/pets.html
+++ b/templates/pets.html
@@ -1,12 +1,16 @@
 {% extends 'base.html' %}
 {% block title %}Pets List{% endblock %}
 {% block content %}
-<h1 class="display-1">All Pets</h1>
-<a href="/add" class="btn btn-sm btn-success">Add Pet</a>
+<div class="row justify-content-center">
+  <h1 class="display-1">All Pets</h1>
+</div>
+<div class="d-flex justify-content-center">
+  <a href="/add" class="btn btn-sm btn-info">Add New Pet</a>
+</div>
 <div class="row">
   {% for pet in pets %}
   <div class="col-md-3 mt-4 text-center">
-    <div class="card profile-card-4">
+    <div class="card h-80 profile-card-4">
       <div class="card-img-block">
         <img class="card-img-top" src={{pet.photo_url}} alt="Card image cap">
       </div>
