--- a/templates/pets.html
+++ b/templates/pets.html
@@ -2,15 +2,15 @@
 {% block title %}Pets List{% endblock %}
 {% block content %}
 <div class="row justify-content-center">
-  <h1 class="display-1">All Pets</h1>
+  <h1 class="display-1 text-secondary">All Pets</h1>
 </div>
 <div class="d-flex justify-content-center">
-  <a href="/add" class="btn btn-sm btn-info">Add New Pet</a>
+  <a href="/add" class="btn btn-sm btn-secondary">Add New Pet</a>
 </div>
 <div class="row">
   {% for pet in pets %}
   <div class="col-md-3 mt-4 text-center">
-    <div class="card h-80 profile-card-4">
+    <div class="card shadow h-80 profile-card-4">
       <div class="card-img-block">
         <img class="card-img-top" src={{pet.photo_url}} alt="Card image cap">
       </div>
@@ -30,6 +30,7 @@
           <em>No info available...</em>
           {% endif %}
         </p>
+        <a href="/{{pet.id}}" class="btn btn-sm btn-light">{{pet.name}}'s Details</a>
       </div>
     </div>
   </div>
