--- a/templates/pet.html
+++ b/templates/pet.html
@@ -21,18 +21,20 @@
         </h5>
         <p class="card-text">
           {% if pet.notes %}
-          {{pet.notes}}
-          {% else %}
-          <em>No info available...</em>
+          "{{pet.notes}}"
           {% endif %}
         </p>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Species: {{pet.species}}</li>
+          <li class="list-group-item">Age: {{pet.age}}</li>
+        </ul>
       </div>
     </div>
   </div>
-  <div class="col-md-3 text-center mx-auto">
+  <div class="col-md-4 text-center mx-auto">
     <div class="card shadow profile-card-4">
       <div class="card-body">
-        <h5 class="card-title">Edit {{pet.name}}</h5>
+        <h5 class="card-title">Edit {{pet.name}}'s Profile</h5>
         <form method="POST">
           {{form.hidden_tag()}}
           {% for field in form if field.widget.input_type != "hidden" %}
@@ -47,10 +49,9 @@
             {% endfor %}
           </div>
           {% endfor %}
-          <div class="row justify-content-between">
-            <button class="btn btn-success">Save Changes</button>
-            <a href="/" class="btn btn-danger">Go Back</a>
-          </div>
+          <button class="btn btn-sm btn-secondary btn-block mb-2">Save Changes</button>
+          <a href="/" class="btn btn-sm btn-secondary btn-block">
+            << Back To Pets List </a>
         </form>
       </div>
     </div>
